# relmo

./: .gitignore  CMakeLists.txt  README.md  optimizations.md  pyproject.toml
.github/workflows/: wheels.yml
examples/flat_rgnn/: _shared.py  kernel_vs_eager.py  run_variants.py
scripts/: benchmark_fast_vs_pymimir.py  benchmark_flat_lgan_native.py  benchmark_iw_horizon_mixed.py  benchmark_mp_ops.py  benchmark_relational_matrix.py  benchmark_relational_models.py  benchmark_relmp_ops.py  profile_batched_variants.py
scripts/ci/: install_torch.py  set_local_version.py  smoke_wheel.py  wheel_matrix.py
src/: CMakeLists.txt
src/_ops/mp/: mp_cuda_kernels.cu  mp_fanin.cpp  mp_fanin.hpp  mp_fanout.cpp  mp_fanout.hpp  mp_ops.cpp  utils.hpp
src/_ops/relmp/: relmp_cuda_kernels.cu  relmp_ops.cpp
src/relm/: __init__.py
src/relm/models/: __init__.py  _logging.py  _misc.py  aggr.py  centralized_flat_relational_gnn.py  film.py  flat_contract.py  flat_lgan_relational_gnn.py  flat_relational_gnn.py  flat_relational_layer.py  grouped_mlp.py  hetero_message_passing.py  mlp.py  program_family_reference.py  pyg_module.py  relation_block_spec.py  relation_blocks.py  relation_mlp_stacks.py  relational_gnn.py
src/relm/models/hetero_mp/: __init__.py  _grouped_exec.py  _ops_env.py  _scatter.py  batched.py  fanin.py  fast_fused.py  fused.py  routing.py
src/relm/ops/: __init__.py  mp.py  relmp.py
src/relmo/: __init__.py
src/relmo/models/: __init__.py  _compile.py  _logging.py  _misc.py  builders.py  centralized_flat_relational_gnn.py  film.py  flat.py  flat_contract.py  flat_kernel_runtime.py  flat_lgan_relational_gnn.py  flat_relational_gnn.py  flat_relational_layer.py  hetero.py  mixins.py  patched_module_dict.py  pyg_module.py  relation_block_spec.py  relation_blocks.py  relational_gnn.py  residual.py
src/relmo/models/_flat/: __init__.py  preparation.py
src/relmo/models/_hetero/: __init__.py
src/relmo/models/flat_relational/: __init__.py  collection.py  collectors.py  execution.py  flat_contract.py  flat_kernel_runtime.py  kernels.py  matching.py  runners.py  topology.py  types.py
src/relmo/models/flat_relational/experimental/: __init__.py  kernel_runtime.py
src/relmo/models/hetero_mp/: __init__.py  _ops_env.py  _scatter.py  _tensor_utils.py  batched.py  fanin.py  fanout.py  fast_fused.py  fused.py
src/relmo/ops/: __init__.py  mp.py  mp_autograd.py  mp_block_kernels.py  mp_common.py  mp_constants.py  mp_dispatch.py  mp_fallbacks.py  mp_pack.py  mp_runtime.py
tests/python/: _graph_fixtures.py  test_batched_fanin_label.py  test_benchmark_fast_vs_pymimir.py  test_centralized_relational_gnn.py  test_flat_lgan_relational_gnn.py  test_flat_relational_gnn.py  test_hetero_mp.py  test_lgan_batched.py  test_mp_module_layout.py  test_mp_ops.py  test_mp_runtime.py  test_public_api.py  test_relational_gnn.py  test_relmp_ops.py
tests/python/support/: __init__.py  program_family_reference.py
